# CMakeDev

./: .gitignore  CMakeLists.txt  README.md
docs/source/: about.rst  conf.py  index.rst
docs/source/about/: about.rst  index.rst  other_projects.rst
docs/source/cmake/: best_practices.rst  callbacks.rst  control_flow.rst  if_statements.rst  index.rst  lists.rst  types.rst  writing_functions.rst
docs/source/conventions/: code_conventions.rst  documentation.rst  index.rst
tests/: CMakeLists.txt  subtract_time.cmake  timer.cmake
timer/: subtract_time.cmake  timer.cmake
